Closed
Bug 803535
Opened 13 years ago
Closed 13 years ago
WebRTC crash [@mozilla::MediaEngineDefault::EnumerateAudioDevices]
Categories
(Core :: WebRTC, defect)
Tracking
()
VERIFIED
FIXED
mozilla19
People
(Reporter: posidron, Assigned: jesup)
References
Details
(Keywords: crash, testcase)
Attachments
(3 files, 2 obsolete files)
Assertion failure: i < Length() (invalid array index), at ../../dist/include/nsTArray.h:537
Not sure if this is a duplicate of:
https://bugzilla.mozilla.org/show_bug.cgi?id=803052
| Reporter | ||
Comment 1•13 years ago
|
||
Sorry,
Not sure if this is a duplicate of:
https://bugzilla.mozilla.org/show_bug.cgi?id=780790
| Reporter | ||
Comment 2•13 years ago
|
||
Comment 3•13 years ago
|
||
Crash Signature: [@ zzz_AsmCodeRange_Begin]
| Assignee | ||
Comment 4•13 years ago
|
||
That crashreport is a different bug
| Assignee | ||
Comment 5•13 years ago
|
||
This *may* be a mirror to the lack of locking in MediaEngineWebRTC (and probably is, since it modifies the lists - though it never removes them, so that's odd. Still, we should avoid two instances of fake streams colliding as well, so I'll add the equivalent mutex and we can re-test.
| Assignee | ||
Comment 6•13 years ago
|
||
| Assignee | ||
Updated•13 years ago
|
Attachment #673396 -
Flags: review?(anant)
| Assignee | ||
Comment 7•13 years ago
|
||
| Assignee | ||
Updated•13 years ago
|
Attachment #673396 -
Attachment is obsolete: true
Attachment #673396 -
Flags: review?(anant)
| Assignee | ||
Updated•13 years ago
|
Attachment #673398 -
Flags: review?(anant)
Comment 8•13 years ago
|
||
Comment on attachment 673398 [details] [diff] [review]
Add mutex for MediaEngineDefault access
Review of attachment 673398 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good!
Attachment #673398 -
Flags: review?(anant) → review+
| Assignee | ||
Comment 9•13 years ago
|
||
| Assignee | ||
Updated•13 years ago
|
Attachment #673398 -
Attachment is obsolete: true
| Assignee | ||
Comment 10•13 years ago
|
||
Mutex is probably good, but the real bug is a cut-and-paste of audio vs video in a loop
| Assignee | ||
Updated•13 years ago
|
Attachment #673403 -
Flags: review?(anant)
Comment 11•13 years ago
|
||
Comment on attachment 673403 [details] [diff] [review]
Add mutex for MediaEngineDefault access
Review of attachment 673403 [details] [diff] [review]:
-----------------------------------------------------------------
Wow, that was subtle! Nice catch.
Attachment #673403 -
Flags: review?(anant) → review+
Comment 12•13 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/e8a93741f3e6
Should this have a crashtest?
Assignee: nobody → rjesup
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Comment 13•13 years ago
|
||
(In reply to Jason Smith [:jsmith] from comment #3)
> https://crash-stats.mozilla.com/report/bp-d5ab0ba9-2e56-4928-b321-
> 4e6fe2121019
Jason, please file as a new bug if it still happens.
Crash Signature: [@ zzz_AsmCodeRange_Begin]
Comment 14•13 years ago
|
||
Verification of this is blocked on the implementation in bug 791330. This test case still crashes due to that bug.
Updated•13 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•