Bug 803535: Add mutex for MediaEngineDefault access, fix cut-and-paste error r=anant