content/media/webrtc/MediaEngineDefault.h
@@ -95,13 +95,18 @@ protected:
 class MediaEngineDefault : public MediaEngine
 {
 public:
-  MediaEngineDefault() {}
+  MediaEngineDefault()
+  : mMutex("mozilla::MediaEngineDefault")
+  {}
   ~MediaEngineDefault() {}
 
   virtual void EnumerateVideoDevices(nsTArray<nsRefPtr<MediaEngineVideoSource> >*);
   virtual void EnumerateAudioDevices(nsTArray<nsRefPtr<MediaEngineAudioSource> >*);
 
 private:
+  Mutex mMutex;
+  // protected with mMutex:
+
   nsTArray<nsRefPtr<MediaEngineVideoSource> > mVSources;
   nsTArray<nsRefPtr<MediaEngineAudioSource> > mASources;
 };
